more fixes and DONE

--- a/p3/p3.md
+++ b/p3/p3.md
@@ -80,11 +80,11 @@ This is Sheriff Meowdy, the cowboy catboy:
 
 ![Drawing of Sheriff Meowdy](../media/p3/so/meowdy0001.png)
 
-One day, the Varmin strode into town:
+One day, the Varmints strode into town:
 
 ![Sheriff Meowdy staring down a bunch of Jerma rats strolling towards him](../media/p3/so/meowdy0002.png)
 
-Sharpshootin' as the Sheriff was, he's man enough (catman enough) to admit when he needs backup. So, he makes a robot helper — Meowdy 2.0 — to help fend off the Varmin:
+Sharpshootin' as the Sheriff was, he's man enough (catman enough) to admit when he needs backup. So, he makes a robot helper — Meowdy 2.0 — to help fend off the Varmints:
 
 ![Robot version of Sheriff Meowdy, labelled "Meowdy 2.0"](../media/p3/so/meowdy0003.png)
 
@@ -114,9 +114,9 @@ He'll oversee 2.0, which can oversee 3.0, which *can* oversee 4.0!
 
 In fact, why stop there? This harebrained "scalable oversight" scheme of his will let him oversee a Meowdy of *any* speed!
 
-So, the Sheriff makes 20 Meowdy's. Meowdy 20.0 is 2<sup>20</sup> ~= one *million* times faster than the Sheriff: plenty quick enough to stop the millions of Varmin!
+So, the Sheriff makes 20 Meowdy's. Meowdy 20.0 is 2<sup>20</sup> ~= one *million* times faster than the Sheriff: plenty quick enough to stop the millions of Varmints!
 
-![Meowdy oversees a chain of Meowdy's, up to Meowdy 20.0, who can shoot all the Varmin dead.](../media/p3/so/meowdy0008.png)
+![Meowdy oversees a chain of Meowdy's, up to Meowdy 20.0, who can shoot all the Varmints dead.](../media/p3/so/meowdy0008.png)
 
 Wait, isn't a single chain of oversight fragile? As in, if _one_ of the Meowdy's break, the entire chain is broken? Yes! One solution is to have _multiple_ interwined chains, like so:
 
@@ -141,7 +141,7 @@ Anywho: with the power of friendship, math, and a bad Wild West accent...
 
 ![Sheriff Meowdy blowing the smoke away from his gun, as the injured Varmin waltz off into the sunset](../media/p3/so/meowdy0010.png)
 
-(👉 [: click to expand bonus section - the "alignment tax", P = NP?, alignment vs control, what about sudden-jump "sharp left turns"?](#ScalableOversightExtras))
+(👉 [: click to expand bonus section - the "alignment tax", P = NP?, alignment vs control, what about sudden-jump "sharp left turns", "value is fragile"?](#ScalableOversightExtras))
 
 ---
 
@@ -152,7 +152,7 @@ _AI Safety for Fleshy Humans_ was created by **Nicky Case**, in collaboration wi
 😸 [**Nicky Case**](https://ncase.me) (me, writing about myself in the third person) just wants to watch the world learn. If you wanna see future explainers on AI Safety (or other topics) by me, sign up for [my YouTube channel](https://www.youtube.com/@itsnickycase) or [my once-a-month newsletter](https://ncase.me/sub/): 👇
 <iframe src="https://ncase.me/ncase-credits/signup2.html" frameborder="no" width="640" height="250"></iframe>
 
-🦕 [**Hack Club**](https://hackclub.com/) helps teen hackers around the world learn from each other, and pssst, they're hosting two [cool](https://midnight.hackclub.com/) [hackathons](https://midnight.hackclub.com/) soon! You can sign up below to learn more, and get free stickers: 👇
+🦕 [**Hack Club**](https://hackclub.com/) helps teen hackers around the world learn from each other, and pssst, they're hosting two [cool](https://midnight.hackclub.com/) [hackathons](https://campfire.hackclub.com/) soon! You can sign up below to learn more, and get free stickers: 👇
 
 {% include 'templates/signup.html' %}
 
@@ -178,7 +178,8 @@ To be clear, "oversee an AI that's only 10% smarter than you" _still_ isn't solv
 
 Anyway, that's the *general* idea. Here's some *specific* implementations & empirical findings:
 
-* 💖➡️💖 **[Recursive Reward Modeling](https://arxiv.org/abs/1811.07871)** uses a Level-N bot not just to check & control a Level-(N+1) bot *in hindsight*, but to *train its intrinsic "goals & desires" in the first place.*[^rrm-detail] As AI researcher Jan Leike [put it](https://aligned.substack.com/p/should-we-control-ai): _“Don’t try to imprison a monster, build something that you can actually trust!”_
+* 💖➡️💖 **[Recursive Reward Modeling](https://arxiv.org/abs/1811.07871)** uses a Level-N bot not just to check & control a Level-(N+1) bot *in hindsight*, but to *train its intrinsic "goals & desires" in the first place.* Specifically, each bot helps _you_ train the next bot. (details:[^rrm-detail]) As AI researcher Jan Leike [put it](https://aligned.substack.com/p/should-we-control-ai): _“Don’t try to imprison a monster, build something that you can actually trust!”_
+    * This can also help value drift, in case "value is fragile". By default, if you passed your values into the 1st bot, and it tried to pass its values to the 2nd, and so on, like a game of Telephone, the Nth bot will get a distorted version of your values. But in Recursive Reward Modeling, each bot helps _you_ directly train the next bot. And so, the more capable the bot, the _better_ it can learn your values!
 * 📈 **[Scaling Laws For Scalable Oversight](https://arxiv.org/abs/2504.18530)** _quantitatively_ measures how many oversight levels/steps you need to maximize oversight success. Encouragingly, like the previous "scaling laws" for how AI improves as you feed them more compute, these "scaling laws of scalable oversight" also seem to be predictable & measurable. [Terekhov & Liu et al 2025](https://mikhailterekhov.github.io/control-tax/) goes further and calculates the "control tax" in \\$, for various AI attackers and defenders.
 * 🕵️🦹 **[GPT-3.5 can catch sneaky, subtly-harmful code, written by the more-powerful GPT-4.
   ](https://arxiv.org/abs/2312.06942)**
@@ -286,6 +287,25 @@ Maybe? But:
 1) Even in the physics example, ice doesn't freeze _instantly;_ you can feel it getting colder, and you have hours or days to react before it fully freezes over. So, even if a "1% smarter AI" gains a radically new capability, the "1% dumber overseer" may still have time to notice & stop it.
 
 2) As you'll see later in this section, the _is_ a Scalable Oversight proposal, called Iterated Distillation & Amplification, where overseers oversee only _strictly "dumber"_ AIs, yet the system as a whole can still be smarter! Read on for details.
+
+**Value Fragility & Value Drift:**
+
+By default, if you pass your values into the 1st bot, and it tried to pass its values to the 2nd, and so on, like a game of Telephone, the Nth bot will get a distorted version of your values.
+
+A solution is Recursive Reward Modeling — (described briefly later in this section) — where each bot helps _you_ directly train the next bot. And so, the more capable the bot, the _better_ it can  learn your values!
+
+So, even if ["Value is Fragile"](https://www.lesswrong.com/posts/GNnHHmm8EzePmKzPk/value-is-fragile), the Recursive Reward Modeling setup (or something similar) ensures that we can get overseeable bots that get better & better at modeling our true values.
+
+But to be honest, I disagree that "value is fragile". The examples in the linked essay seem either: 
+
+- Contrived: the author gives an example of "what if we forget to specify subjective conscious experience?" but even a stupid specification like "increase happiness" already implies subjective experience.
+- Or not that bad: the author gives an example of "what if we specify all of human values _except for boredom_; then it'll make us have a single highly optimized experience, over and over and over again." Okay, so we'll experience love & friendship & health & growth & creation & joy over and over and over again? That's… fine, honestly? I wouldn't call a monk's life "devoid of value" just because they tend their rock garden over and over in content peace.
+
+As an analogy, if a superintelligent AI were to learn all our values _except for music_, the resulting world would _still be amazing_. The loss of music _would_ be a genuine loss, but there's still love & mathematics & great food & spleunking & the cures for all cancers & so on. Far from a world "devoid of value"
+
+Anyway, I don't think value is fragile, and even if it is, there's proposed solutions like Recursive Reward Modelling which can address that.
+
+
 
 
 #### :x IDA
@@ -811,6 +831,7 @@ Even better, in [Olah et al 2020](https://distill.pub/2020/circuits/zoom-in/), t
 For example, here's how the "window", "car body", and "wheels" neurons combine to create a "car detector" circuit:
 
 ![Three surreal images, corresponding to what maximally activates "window", "car body", and "wheels", feeds into a circuit leading to surreal image of "car".](../media/p3/interp/car.png)
+It's not "just" for image models; [the Circuits research program now works for cutting-edge LLMs](https://transformer-circuits.pub/2025/attribution-graphs/biology.html), and tracing what happens inside of them during hallucination, jailbreaks, and goal misalignment!
 
 **🤯 Understanding "grokking" in neural networks:**
 
@@ -1547,6 +1568,8 @@ Anthropic is the pioneer behind this technique, and they're already using it suc
 
 [^const-ai-2]: [Collective Constitutional AI: Aligning a Language Model with Public Input](https://www.anthropic.com/research/collective-constitutional-ai-aligning-a-language-model-with-public-input) (2023)
 
+(Anthropic's also used a variant of Constitutional AI to train Claude's ["character"](https://www.anthropic.com/research/claude-character), to embody virtues like curiosity, open-mindedness, and thoughtfulness. This is very similar to the [virtue ethics](https://iep.utm.edu/virtue/) approach: instead of trying to robotically follow moral rules, internalize good character traits!)
+
 This is the most straightforward way to put humanity's wide range of values into a bot. (and _actually_ deployed in a major LLM product!)
 
 🏛️ **Moral Parliament:**
@@ -2041,6 +2064,10 @@ Then again...
 ![Close-up of Sigourney Weaver](../media/p3/cyborg/weaver2.png)
 
 That's pretty cool.
+
+Remember: the goal isn't necessarily to "have AGI" — it's to find cures for diseases, help us grow wiser, make sure humanity (and/or other sentient beings) all flourish as much as we can. If autonomous AGI is the _only_ way to do it, sure, go for that. But I suspect — at least hope — that the "cyborg" approach is another way:
+
+For us to _grow_ alongside our creations.
 
 #### :x Human LLM Advantages
 
