--- a/p3/p3.md
+++ b/p3/p3.md
@@ -18,6 +18,8 @@ Then: although no *one* solution covers the whole space, *the entire problem spa
 
 ![Rays going through layers of swiss cheese, which have holes in them. The rays can easily go through the holes of _one_ layer of cheese, but not all of them.](../media/p3/intro/cheese.png)
 
+( What about _intelligent_ adversaries, who can steer & navigate through the holes? Look, it's a metaphor. The "multiple imperfect layers of defense" model works even against intelligent adversaries. Cybersecurity is a good example: this is why, for important online accounts, you need a password _and_ multifactor authentication code.)
+
 ( [: 🧀 Bonus section: counter-arguments & counter-counter-arguments on the Swiss Cheese Model](#SwissCheese) ← _optional: whenever you see a dotted-underlined section, you can click to expand it!_ )
 
 *This does not mean AI Safety is 100% solved yet* — we still need to triple-check these proposals, and get engineers/policymakers to even *know* about these solutions, let alone implement them. But for now, I'd say: "lots of work to do, but lots of promising starts"!
@@ -64,7 +66,9 @@ Critique Two — more relevant to AI Safety — is it assumes the problem is not
 
 > “If you ever make something that is trying to get to the stuff on the other side of all your Swiss cheese, it’s not that hard for it to just route through the holes.”
 
-I accept this counterargument when it comes to defending against an _already_-misaligned superintelligence. But if we're talking about _growing a trusted intelligence from scratch_, then the Swiss Cheese Model still makes sense at each step, *and*, you can use each iteration of a trusted AI as an extra "layer of cheese" for training better iterations of that AI. (See below section: Scalable Oversight)
+It's important to not take the cheese metaphor too literally. The "multiple imperfect layers of defense" model works even against intelligent adversaries. Cybersecurity is a good example: this is why, for important online accounts, you need a password _and_ multifactor authentication code.
+
+Further, we can do better than defending against an _already_-misaligned superintelligence. If we're talking about _growing a trusted intelligence from scratch_, then the Swiss Cheese Model still makes sense at each step, *and*, you can use each iteration of a trusted AI as an extra "layer of cheese" for training better iterations of that AI. (See below section: Scalable Oversight)
 
 As AI researcher Jan Leike [puts it](https://aligned.substack.com/p/should-we-control-ai):
 
@@ -1212,7 +1216,9 @@ Imagine you give someone a pen & paper, and ask them to add a pair of 2-digit nu
 
 You give them a pair of 8-digit numbers. _They fail completely_. Not minor mistakes like forgetting to carry a one. _Complete, catastrophic failure_.
 
-That is how the modern AI do.
+That is how the modern AI do.[^mult-bench]
+
+[^mult-bench]: Edit - after publishing this piece, I learnt about [The Long Multiplication Bench](https://github.com/mrconter1/The-Long-Multiplication-Benchmark?tab=readme-ov-file#the-long-multiplication-benchmark), which asks frontier LLMs to try to multiply long numbers manually. Even though LLMs _know_ the schoolbook method of multiplication, and can perform each _individual_ step, for some reason, they all reliably fail to multiply 10+ digit numbers.
 
 . . .
 
@@ -1334,7 +1340,7 @@ An AI skeptic might say, "See! LLMs are just stochastic parrots.[^parrot] They j
 
 I don't think that's quite right — I doubt there was _any_ web document writing out the full solution to the 7-disk, but not 8-disk and up. Nor do I think there was any document with ["instructions on how to remove a peanut butter sandwich from a VCR, in the style of the King James Bible"](https://x.com/tqbf/status/1598513757805858820), yet early-ChatGPT delivered _perfectly_ in this never-before-seen scenario. So, LLMs _do_ generalize, at least a little bit.
 
-Here's my guess, and I'm far from the first[^pearl-quote] to make this guess:
+Here's my guess, and I'm far from the first[^bengio-quote][^pearl-quote] to make this guess:
 
 **Modern AIs "think in vibes". They do not "think in gears".**[^gears]
 
@@ -1374,15 +1380,19 @@ Is that a bunch o' vague jargon? Yes. Ironically, I only have a vibe-based under
 
 [^pearl-quote]: As Judea Pearl — winner of the Turing Prize, the "Nobel Prize of Computer Science" — once told Quanta Magazine in their article, [To Build Truly Intelligent Machines, Teach Them Cause and Effect](https://www.quantamagazine.org/to-build-truly-intelligent-machines-teach-them-cause-and-effect-20180515/): _“As much as I look into what’s being done with deep learning, I see they’re all stuck there on the level of associations. Curve fitting. [...] no matter how skillfully you manipulate the data and what you read into the data when you manipulate it, it’s still a curve-fitting exercise, albeit complex and nontrivial.”_
 
+[^bengio-quote]: Yoshua Bengio, one of the "grandfathers of deep learning", [has long emphasized](https://spectrum.ieee.org/yoshua-bengio-revered-architect-of-ai-has-some-ideas-about-what-to-build-next) the need for AIs to actually understand cause-and-effect: _“The kind of high-level concepts that you reason with tend to be variables that are cause and/or effect. You don’t reason based on pixels. You reason based on concepts like door or knob or open or closed. Causality is very important for the next steps of progress of machine learning.”_
+
 . . .
 
 Things get worse.
 
 From the conclusion of Apple's _Illusion of Thinking_ paper:
 
-> \[Claude 3.7 + Thinking\] also achieves near-perfect accuracy when solving the Tower of Hanoi with (N=5), which requires 31 moves, while it fails to solve [the River Crossing puzzle](https://en.wikipedia.org/wiki/Missionaries_and_cannibals_problem) when (N=3), which has a solution of 11 moves. **This likely suggests that examples of River Crossing with N>2 are scarce on the web**, meaning [Large Language Models with Reasoning\] **may not have frequently encountered or memorized such instances during training.**
+> \[Claude 3.7 + Thinking\] also achieves near-perfect accuracy when solving the Tower of Hanoi with (N=5), which requires 31 moves, while it fails to solve [the River Crossing puzzle](https://en.wikipedia.org/wiki/Missionaries_and_cannibals_problem) when (N=3), which has a solution of 11 moves. **This likely suggests that examples of River Crossing with N>2 are scarce on the web**[^not-scarce], meaning [Large Language Models with Reasoning\] **may not have frequently encountered or memorized such instances during training.**
 >
 > _(emphasis added)_
+
+[^not-scarce]: Actually, the N=3 solution to River Crossing is actually [right on Wikipedia](https://en.wikipedia.org/wiki/Missionaries_and_cannibals_problem); however, their paper called the problem "River Crossing" instead of the more common "Missionaries & Cannibals", which is probably why the LLMs didn't remember the solution.
 
 So the problem's not the _length_ of the reasoning, it's _how common_ is the reasoning. This parallels the findings from [the 2024 paper, Embers of Autoregression](https://www.pnas.org/doi/pdf/10.1073/pnas.2322420121):
 
@@ -1415,10 +1425,11 @@ The above graph shows various AIs' performance vs cost on ARC-AGI, a series of g
 
 . . .
 
-Okay, _now_ let's quickly address the two main criticisms of the controversial Apple paper:
+Okay, _now_ let's quickly address the three main criticisms of the controversial Apple paper: ([Lawrence Chan did a great critical review of this paper](https://www.lesswrong.com/posts/5uw26uDdFbFQgKzih/beware-general-claims-about-generalizable-reasoning))
 
 1) The LLM's "context window" (its "thinking space") wasn't big enough to generate the full solutions. This _is_ true for the 12+ disk and up, but not for 8-disk. And the River Crossing solutions were _smaller_ than the 5-disk solutions, yet the LLMs failed anyway. So, size of the "thinking space" wasn't the problem.
 2) These LLMs can write _a computer program that solves Hanoi_, then can pass that to a tool that runs code. LLM + program synthesis _is_ a promising solution to "thinking in vibes + gears", and in fact is how the top contenders at ARC-AGI did it. But: this is like someone who can't add with pen & paper, but _can_ pull up a calculator and add two numbers. It shows a lack of deeper understanding. (And in this case, Hanoi is so famous, of _course_ code solutions are in the training data.)
+3) The authors made a math error, their River Crossing puzzle is provably impossible for N > 5. Yeah the authors messed up. But the LLMs failed at N > 2.
 
 Again, it's important not to over-update on _one_ study — but, I think, _combined_ with the results from all of where LLMs fail at (and are great at), it's strong evidence of this hypothesis:
 
