--- a/p3/p3.md
+++ b/p3/p3.md
@@ -18,7 +18,7 @@ Then: although no *one* solution covers the whole space, *the entire problem spa
 
 ![Rays going through layers of swiss cheese, which have holes in them. The rays can easily go through the holes of _one_ layer of cheese, but not all of them.](../media/p3/intro/cheese.png)
 
-( What about _intelligent_ adversaries, who can steer & navigate through the holes? Look, it's a metaphor. The "multiple imperfect layers of defense" model works even against intelligent adversaries. Cybersecurity is a good example: this is why, for important online accounts, you need a password _and_ multifactor authentication code.)
+( What about _intelligent_ adversaries, who can steer & navigate through the holes? Look, it's a metaphor. The "multiple imperfect layers of defense" model works even against _much_ more intelligent/capable adversaries. For example, cybersecurity: a strong password + multi-factor authentication + end-to-end encryption = can defend you against well-funded criminals. )
 
 ( [: 🧀 Bonus section: counter-arguments & counter-counter-arguments on the Swiss Cheese Model](#SwissCheese) ← _optional: whenever you see a dotted-underlined section, you can click to expand it!_ )
 
@@ -66,7 +66,7 @@ Critique Two — more relevant to AI Safety — is it assumes the problem is not
 
 > “If you ever make something that is trying to get to the stuff on the other side of all your Swiss cheese, it’s not that hard for it to just route through the holes.”
 
-It's important to not take the cheese metaphor too literally. The "multiple imperfect layers of defense" model works even against intelligent adversaries. Cybersecurity is a good example: this is why, for important online accounts, you need a password _and_ multifactor authentication code.
+It's important to not take the cheese metaphor too literally. The "multiple imperfect layers of defense" model works even against _much_ more intelligent/capable adversaries. For example, cybersecurity: a strong password + multi-factor authentication + end-to-end encryption = can defend you against well-funded criminals.
 
 Further, we can do better than defending against an _already_-misaligned superintelligence. If we're talking about _growing a trusted intelligence from scratch_, then the Swiss Cheese Model still makes sense at each step, *and*, you can use each iteration of a trusted AI as an extra "layer of cheese" for training better iterations of that AI. (See below section: Scalable Oversight)
 
