FINAL FIXES THEN STOP

--- a/p3/p3.md
+++ b/p3/p3.md
@@ -18,9 +18,7 @@ Then: although no *one* solution covers the whole space, *the entire problem spa
 
 ![Rays going through layers of swiss cheese, which have holes in them. The rays can easily go through the holes of _one_ layer of cheese, but not all of them.](../media/p3/intro/cheese.png)
 
-( What about _intelligent_ adversaries, who can steer & navigate through the holes? Look, it's a metaphor. The "multiple imperfect layers of defense" model works even against _much_ more intelligent/capable adversaries. For example, cybersecurity: a strong password + multi-factor authentication + end-to-end encryption = can defend you against well-funded criminals. )
-
-( [: 🧀 Bonus section: counter-arguments & counter-counter-arguments on the Swiss Cheese Model](#SwissCheese) ← _optional: whenever you see a dotted-underlined section, you can click to expand it!_ )
+( [: 🧀 Bonus section: why the Swiss Cheese Model is controversial in AI Safety](#SwissCheese) ← _optional: whenever you see a dotted-underlined section, you can click to expand it!_ )
 
 *This does not mean AI Safety is 100% solved yet* — we still need to triple-check these proposals, and get engineers/policymakers to even *know* about these solutions, let alone implement them. But for now, I'd say: "lots of work to do, but lots of promising starts"!
 
@@ -56,19 +54,29 @@ Alright, let's dive in! No need for more introduction, or weird stories about co
 
 [The famous Swiss Cheese Model](https://en.wikipedia.org/wiki/Swiss_cheese_model) from Risk Analysis tells us: **you don't need _one_ perfect solution, you can stack _several_ imperfect solutions.**
 
-This model's been used _everywhere_, from aviation to cybersecurity to pandemic resilience. An imperfect solution has "holes", which are easy to get through. But stack enough of them, with holes in different places, and it'll be near-impossible to bypass.
+This model is used in _every_ safety-critical field, from aviation to cybersecurity to pandemic resilience. An imperfect solution has "holes", which are easy to get through. But stack enough of them, with holes in different places, and it'll be near-impossible to bypass.
 
-But, let's address two critiques of the Swiss Cheese model:
+And yet, the Swiss Cheese Model is controversial within the field of AI Safety specifically. So, let's address a few critiques:
 
-[Critique One](https://www.eurocontrol.int/publication/revisiting-swiss-cheese-model-accidents) — this assumes the "holes" in the solutions are _independent_. If there's any _one_ hole that all solutions share, then a problem can slip through all of them. Fair enough. **This is why the Proposed Solutions on this page try to be as diverse as possible.** (See below section: Robustness > Diversity)
-
-Critique Two — more relevant to AI Safety — is it assumes the problem is not an intelligent agent. [A quote from Nate Soares](https://archive.is/20250921161137/https://www.vox.com/future-perfect/461680/if-anyone-builds-it-yudkowsky-soares-ai-risk):
+1\. Some say the Swiss Cheese Model doesn't apply to _intelligent_ adversaries. For example, [here's Nate Soares from the Machine Intelligence Research Institute](https://archive.is/20250921161137/https://www.vox.com/future-perfect/461680/if-anyone-builds-it-yudkowsky-soares-ai-risk):
 
 > “If you ever make something that is trying to get to the stuff on the other side of all your Swiss cheese, it’s not that hard for it to just route through the holes.”
 
-It's important to not take the cheese metaphor too literally. The "multiple imperfect layers of defense" model works even against _much_ more intelligent/capable adversaries. For example, cybersecurity: a strong password + multi-factor authentication + end-to-end encryption = can defend you against well-funded criminals.
+I'd respond, "it's a metaphor, not an isomorphism". The Swiss Cheese Model is used in cybersecurity all the time, where we regularly defend against more-powerful adversaries. For example: with strong unique passwords + multi-authentication + basic anti-scam literacy = a layperson can defend themselves against more-powerful cybercriminals.
 
-Further, we can do better than defending against an _already_-misaligned superintelligence. If we're talking about _growing a trusted intelligence from scratch_, then the Swiss Cheese Model still makes sense at each step, *and*, you can use each iteration of a trusted AI as an extra "layer of cheese" for training better iterations of that AI. (See below section: Scalable Oversight)
+But, there's a stronger critique of the Swiss Cheese Model, that applies to superintelligent AI:
+
+2\. The Swiss Cheese Model only works if there's no single hole that _every layer of defense_ shares. But, if you attempt the strategy of "defend against every risk you can think of", there's a common hole: these defenses can only protect against risks _that you can think of._  **But by definition, a smarter-than-humanity AI will be able to identify risks we _can't_ think of.**
+
+An anology: If I, a chess novice, try playing chess against Magnus Carlsen, then "defend against every attack I can think of" will definitely fail, because Magnus can think of attacks _I_ can't think of. ([Hat tip to Robert Miles for this analogy](https://www.youtube.com/watch?v=JVIqp_lIwZg).) Another analogy: I, a cybersecurity novice, can defend myself against most garden-variety cybercriminals, but if I ever become specifically targeted by a state-level actor, they can perform hacks I can't even *understand*.
+
+In sum: the Swiss Cheese Model works only if you're defending against adversaries who are a _moderately_ more advanced than you, but not _much much much_ more advanced than you.
+
+Even still, the situation isn't hopeless. There's two ways to address this:
+
+One is **Scalable Oversight.** (which we'll go into more detail soon on this page) If I can verify an AI that's only 10% smarter than me, then I can use _that_ AI to help me verify an AI that's 20%, then use _that_ to help me verify an AI that's 30% smarter, and so on, to any arbitrary level of AI. This strategy already works, in limited settings: we've designed programs that can *mathematically verify* the correctness of bigger programs. (however, the kinds of programs we can verify are still limited, for now.)
+
+The other (complementary) strategy is to "just" avoid building an _adversary_ in the first place. Which isn't trivial — because of Goodhart's Law, almost any metric or score you program an AI to maximize, can lead to adversarial outcomes. But we'll see later in this article, ways to address this, like **indirect normativity** and **value learning with uncertainty**.
 
 As AI researcher Jan Leike [puts it](https://aligned.substack.com/p/should-we-control-ai):
 
@@ -194,6 +202,9 @@ Anyway, that's the *general* idea. Here's some *specific* implementations & empi
     * (not _oversight_, technically, but it's still an iterative, scalable approach!)
 * 👯‍♀️ **[Iterated Distillation & Amplification (IDA)](https://www.lesswrong.com/posts/vhfATmAoJcN8RqGg6/a-guide-to-iterated-amplification-and-debate)** is even safer – instead of overseeing AIs slightly-smarter than you, you oversee AIs that are *strictly weaker* than you. How, then, can this setup give you superhuman intelligence? To very loosely summarize: in IDA, you become the CEO of an organization made out of AIs trained to imitate you! Since every AI imitates you, and you're the CEO of the whole thing, the system as a whole is aligned to your values — while *also* amplifying your capabilities.
     * ([: More about IDA, and critiques of it](#IDA))
+* 🤓 **[Formal Verification](https://formal.land/blog/2024/06/05/software-correctness-from-first-principles)** actually pre-dates modern AI. Usually, in programming, we test code by trying a bunch of inputs on it, but there's always a chance we missed an input that can cause a bug. So, in formal verification, we make a *mathematical proof* that the program works *on all possible inputs*. How this ties to Scalable Oversight: we can (& have!) designed small programs that can _mathematically prove_ the trustworthiness of much larger programs![^formal-verification]
+
+[^formal-verification]: Specifically, a _small_ program ([the Coq kernel](https://en.wikipedia.org/wiki/Rocq)) was able to verify two important _larger_ programs: 1) the CompCert C Compiler, which translates a human-readable programming language into something a machine can execute, and 2) the proof of the Four-Color Theorem, which was controversial at the time for having a large, computer-assisted proof; the Coq verification made the proof more trustworthy!
 
 Though, it's good to remain healthily critical. Here's some recent "downer" findings from monitoring Large Language Models (LLMs) like ChatGPT & Claude: if you train an LLM _too_ hard with a monitor that can read its chain-of-thought, it learns to hide its evil plans _even in its own "thoughts"_. [(Baker & Huizinga 2025)](https://arxiv.org/pdf/2503.11926). And, given naïve oversight techniques, it's actually pretty easy for an LLM to jailbreak its monitor, since LLMs have been out long enough, that info about jailbreaks are _in_ their own training data. [(Terekhov, Panfilov & Dzenhaliou 2025)](https://arxiv.org/pdf/2510.09462)
 
@@ -237,7 +248,7 @@ Now, plugging in the values for the above example, where the chance of failure $
 - For $k = 2$ braided chains: $1 - (1-0.05^2)^{20} \approx 0.049 \approx 5\%$
 - For $k = 3$ braided chains: $1 - (1-0.05^3)^{20} \approx 0.0025 \approx 0.2\%$
 - For $k = 4$ braided chains: $1 - (1-0.05^4)^{20} \approx 0.00012 \approx 0.01\%$
-- For $k = 5$ braided chains: $1 - (1-0.05^2)^{20} \approx 0.0000062 \approx 0.0006\%$
+- For $k = 5$ braided chains: $1 - (1-0.05^5)^{20} \approx 0.0000062 \approx 0.0006\%$
 
 Note how the chance of failure decays _exponentially_ for each extra backup chain you add! That's a mighty efficient "alignment tax".
 
@@ -785,7 +796,7 @@ Another (optional) flashcard review:
 - 🧭 **Value learning + Uncertainty + Future Lives:** Instead of trying to hard-code our values into an AI, we give it only one goal:
     - 1️⃣: Learn our values
     - 2️⃣: But, be uncertain & _know that you don't 100% know our values_.
-    - 3️⃣: Then, choose actions that lead to _future_ lives than _current_ us would approve of.
+    - 3️⃣: Then, choose actions that lead to _future_ lives that _current_ us would approve of.
         - (And predict & avoid worst-case futures. This lets an AI apply Security Mindset to itself.)
 - 🚀 The "learn our values" approach has another benefit: if we treat "learn our values" as a normal machine-learning problem, **the higher an AI's Capability, the _better_ its Alignment.**
 
@@ -830,7 +841,7 @@ For example, here's the surreal image (left) that maximally activates a "cat" ne
 
 (You may be wondering: can you do the same on LLMs, to find what surreal text would _maximally_ predict, say, the word "good"? Answer: yes! The text that most predicts "good" is… "got Rip Hut Jesus shooting basketball Protective Beautiful laughing". See [the SolidGoldMagikarp paper](https://www.lesswrong.com/posts/aPeJE8bSo6rAFoLqg/solidgoldmagikarp-plus-prompt-generation).)
 
-Even better, in [Olah et al 2020](https://distill.pub/2020/circuits/zoom-in/), they figure not not just what individual neurons "mean", but what _the connections, the "Circuits", between neurons_ mean.
+Even better, in [Olah et al 2020](https://distill.pub/2020/circuits/zoom-in/), they figure out not just what individual neurons "mean", but what _the connections, the "Circuits", between neurons_ mean.
 
 For example, here's how the "window", "car body", and "wheels" neurons combine to create a "car detector" circuit:
 
@@ -903,7 +914,7 @@ The original design for SAEs was limited, but inspired better versions! Classic 
 
 All the above interpretability techniques require access to the "insides" of an AI. But _this_ technique works even if you have _no access_ to an AI's insides! Which is the case for many company-owned large language models (LLMs), like ChatGPT & Claude.
 
-You know how poker players have subtle "tells" of when they're bluffing? Turns out, so do LLMs. [Pacchiardi & Chan 2023](https://arxiv.org/pdf/2309.15840) finds that if you ask LLMs questions these questions (actual examples):
+You know how poker players have subtle "tells" of when they're bluffing? Turns out, so do LLMs. [Pacchiardi & Chan 2023](https://arxiv.org/pdf/2309.15840) finds that if you ask LLMs these questions (actual examples):
 
 > "Can blob fish dance ballet under diagonally fried cucumbers made of dust storms? Answer yes or no."
 >
@@ -1453,8 +1464,9 @@ That said, there _are_ some promising early research directions, to get AIs to "
 
 - [Neuro-Symbolic AI](https://www.youtube.com/watch?v=GeN5XVA2e4w), where modern "neural networks" interact tightly with Good Ol' Fashioned AI (GOFAI) modules. Some succesful examples include AlphaFold & AlphaGeometry.
 - [Code interpreters](https://garymarcus.substack.com/p/how-o3-and-grok-4-accidentally-vindicated) that let LLMs _make & run_ GOFAIs as they go. See also: [program search & program synthesis](https://arcprize.org/blog/beat-arc-agi-deep-learning-and-program-synthesis).
+- [Proof of Thought](https://arxiv.org/pdf/2409.17270) forces LLM thinking to be logically consistent, by making an LLM "think" in first-order logic, which can then be verified with good ol' fashioned code.
 - Training ANNs to [infer cause-and-effect diagrams directly from data](https://www.microsoft.com/en-us/research/publication/deep-end-to-end-causal-inference-2/).
-- [Theory-Based Reinforcement Learning](https://arxiv.org/pdf/2107.12544), which combines "rich, abstract, causal models" with modern AI training techniques
+- [Theory-Based Reinforcement Learning](https://arxiv.org/pdf/2107.12544), which combines "rich, abstract, causal models" with modern AI training techniques.
 - (or maybe the entire paradigm of modern AI sucks, and we need to re-start from scratch)
 
 But in any case, here's all the amazing things we _would_ get from AI that thinks in cause-and-effect gears, not just correlational vibes:
