--- a/p3/p3.md
+++ b/p3/p3.md
@@ -202,7 +202,7 @@ Anyway, that's the *general* idea. Here's some *specific* implementations & empi
     * (not _oversight_, technically, but it's still an iterative, scalable approach!)
 * 👯‍♀️ **[Iterated Distillation & Amplification (IDA)](https://www.lesswrong.com/posts/vhfATmAoJcN8RqGg6/a-guide-to-iterated-amplification-and-debate)** is even safer – instead of overseeing AIs slightly-smarter than you, you oversee AIs that are *strictly weaker* than you. How, then, can this setup give you superhuman intelligence? To very loosely summarize: in IDA, you become the CEO of an organization made out of AIs trained to imitate you! Since every AI imitates you, and you're the CEO of the whole thing, the system as a whole is aligned to your values — while *also* amplifying your capabilities.
     * ([: More about IDA, and critiques of it](#IDA))
-* 🤓 **[Formal Verification](https://formal.land/blog/2024/06/05/software-correctness-from-first-principles)** actually pre-dates modern AI. Usually, in programming, we test code by trying a bunch of inputs on it, but there's always a chance we missed an input that can cause a bug. So, in formal verification, we make a *mathematical proof* that the program works *on all possible inputs*. How this ties to Scalable Oversight: we can (& have!) designed small programs that can _mathematically prove_ the trustworthiness of much larger programs![^formal-verification]
+* 🤓 **[Formal Verification](https://formal.land/blog/2024/06/05/software-correctness-from-first-principles)** actually pre-dates modern AI. Usually, in programming, we test code by trying a bunch of inputs on it, but there's always a chance we missed an input that can cause a bug. So, in formal verification, we make a *mathematical proof* that the program works *on all possible inputs*. How this ties to Scalable Oversight: we can (& have!) designed small programs that can _verify_ the trustworthiness of much larger programs![^formal-verification]
 
 [^formal-verification]: Specifically, a _small_ program ([the Coq kernel](https://en.wikipedia.org/wiki/Rocq)) was able to verify two important _larger_ programs: 1) the CompCert C Compiler, which translates a human-readable programming language into something a machine can execute, and 2) the proof of the Four-Color Theorem, which was controversial at the time for having a large, computer-assisted proof; the Coq verification made the proof more trustworthy!
 
