--- a/p3/p3.md
+++ b/p3/p3.md
@@ -202,9 +202,9 @@ Anyway, that's the *general* idea. Here's some *specific* implementations & empi
     * (not _oversight_, technically, but it's still an iterative, scalable approach!)
 * 👯‍♀️ **[Iterated Distillation & Amplification (IDA)](https://www.lesswrong.com/posts/vhfATmAoJcN8RqGg6/a-guide-to-iterated-amplification-and-debate)** is even safer – instead of overseeing AIs slightly-smarter than you, you oversee AIs that are *strictly weaker* than you. How, then, can this setup give you superhuman intelligence? To very loosely summarize: in IDA, you become the CEO of an organization made out of AIs trained to imitate you! Since every AI imitates you, and you're the CEO of the whole thing, the system as a whole is aligned to your values — while *also* amplifying your capabilities.
     * ([: More about IDA, and critiques of it](#IDA))
-* 🤓 **[Formal Verification](https://formal.land/blog/2024/06/05/software-correctness-from-first-principles)** actually pre-dates modern AI. Usually, in programming, we test code by trying a bunch of inputs on it, but there's always a chance we missed an input that can cause a bug. So, in formal verification, we make a *mathematical proof* that the program works *on all possible inputs*. How this ties to Scalable Oversight: we can (& have!) designed small programs that can _verify_ the trustworthiness of much larger programs![^formal-verification]
+* 🤓 **[Formal Verification](https://formal.land/blog/2024/06/05/software-correctness-from-first-principles)** actually pre-dates modern AI. Usually, in programming, we test code by trying a bunch of inputs on it, but there's always a chance we missed an input that can cause a bug. So, in formal verification, we make a *mathematical proof* that the program works *on all possible inputs*. How this ties to Scalable Oversight: we can (& have!) designed small programs that helped humans verify the trustworthiness of much larger programs![^formal-verification]
 
-[^formal-verification]: Specifically, a _small_ program ([the Coq kernel](https://en.wikipedia.org/wiki/Rocq)) was able to verify two important _larger_ programs: 1) the CompCert C Compiler, which translates a human-readable programming language into something a machine can execute, and 2) the proof of the Four-Color Theorem, which was controversial at the time for having a large, computer-assisted proof; the Coq verification made the proof more trustworthy!
+[^formal-verification]: Specifically, a _small_ program ([the Coq kernel](https://en.wikipedia.org/wiki/Rocq)) was able to help humans verify two important _larger_ programs: 1) the CompCert C Compiler, which translates a human-readable programming language into something a machine can execute, and 2) the proof of the Four-Color Theorem, which was controversial at the time for having a large, computer-assisted proof; the Coq verification made the proof more trustworthy!
 
 Though, it's good to remain healthily critical. Here's some recent "downer" findings from monitoring Large Language Models (LLMs) like ChatGPT & Claude: if you train an LLM _too_ hard with a monitor that can read its chain-of-thought, it learns to hide its evil plans _even in its own "thoughts"_. [(Baker & Huizinga 2025)](https://arxiv.org/pdf/2503.11926). And, given naïve oversight techniques, it's actually pretty easy for an LLM to jailbreak its monitor, since LLMs have been out long enough, that info about jailbreaks are _in_ their own training data. [(Terekhov, Panfilov & Dzenhaliou 2025)](https://arxiv.org/pdf/2510.09462)
 
